--- a/index.html
+++ b/index.html
@@ -868,6 +868,228 @@
                 font-size: 36px;
             }
         }
+        /* ============================= */
+/* MOBILE RESPONSIVENESS FIXES   */
+/* ============================= */
+
+@media (max-width: 768px) {
+
+    body {
+        overflow-x: hidden;
+    }
+
+    /* Global padding fix */
+    section {
+        padding: 70px 20px;
+    }
+
+    .container {
+        padding: 0;
+    }
+
+    /* NAVBAR */
+    .nav-container {
+        padding: 0 20px;
+        height: 70px;
+    }
+
+    .logo-text img {
+        max-width: 160px;
+        height: auto;
+    }
+
+    /* HERO */
+    .hero {
+        padding: 110px 20px 60px;
+    }
+
+    .hero-container {
+        gap: 40px;
+        text-align: center;
+    }
+
+    .hero-content h1 {
+        font-size: 32px;
+        line-height: 1.25;
+        word-break: break-word;
+    }
+
+    .hero-content p {
+        font-size: 16px;
+    }
+
+    .hero-buttons {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .btn {
+        width: 100%;
+        text-align: center;
+    }
+
+    .hero-stats {
+        padding: 35px 20px;
+    }
+
+    .hero-stats-number {
+        font-size: 52px;
+    }
+
+    /* SECTION HEADERS */
+    .section-header h2 {
+        font-size: 32px;
+        line-height: 1.3;
+    }
+
+    .section-header p {
+        font-size: 16px;
+        padding: 0 10px;
+    }
+
+    /* SERVICES */
+    .services-grid {
+        grid-template-columns: 1fr;
+        gap: 25px;
+    }
+
+    .service-card {
+        padding: 35px 25px;
+    }
+
+    .service-card h3 {
+        font-size: 20px;
+    }
+
+    .service-card p {
+        font-size: 15px;
+    }
+
+    .service-icon img {
+        max-width: 70px;
+    }
+
+    /* ABOUT */
+    .about-content h2 {
+        font-size: 32px;
+    }
+
+    .about-content p {
+        font-size: 16px;
+    }
+
+    .feature-item span {
+        font-size: 15px;
+    }
+
+    .stats-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .stat-box {
+        padding: 35px 20px;
+    }
+
+    .stat-box .number {
+        font-size: 42px;
+    }
+
+    /* TEAM */
+    .team-grid {
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+
+    .team-card {
+        padding: 30px 25px;
+    }
+
+    .team-avatar img {
+        max-width: 90px;
+    }
+
+    /* PROJECTS */
+    .projects-grid {
+        grid-template-columns: 1fr;
+        gap: 25px;
+    }
+
+    .project-card {
+        height: 320px;
+    }
+
+    .project-title {
+        font-size: 22px;
+    }
+
+    /* OWNER SECTION */
+    .owner-card {
+        padding: 45px 25px;
+    }
+
+    .owner-title {
+        font-size: 28px;
+    }
+
+    .owner-card p {
+        font-size: 15px;
+    }
+
+    .owner-contact-item {
+        display: flex;
+        justify-content: center;
+        margin: 10px 0;
+        font-size: 14px;
+    }
+
+    /* CONTACT */
+    .contact-grid {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+
+    .contact-info h3 {
+        font-size: 26px;
+    }
+
+    .contact-item {
+        padding: 20px;
+    }
+
+    .contact-form {
+        padding: 35px 25px;
+    }
+
+    .contact-form h3 {
+        font-size: 24px;
+    }
+
+    /* FOOTER */
+    .footer-logo img {
+        max-width: 180px;
+    }
+
+    .footer-text {
+        font-size: 13px;
+        padding: 0 10px;
+    }
+}
+
+/* EXTRA SMALL DEVICES */
+@media (max-width: 400px) {
+
+    .hero-content h1 {
+        font-size: 28px;
+    }
+
+    .section-header h2 {
+        font-size: 28px;
+    }
+
+    .project-title {
+        font-size: 20px;
+    }
+}
     </style>
 </head>
 <body>
