Update contact information and service descriptions

--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
                 <div class="service-icon"><img src="rcc.png" alt="Interior Services" style="width: 100%; height: auto;"></div>
                 <h3>RCC and Steel Work Services</h3>
                 <p>
-                        •Rcc Residential <br>
+                        •Rcc Residential buildings<br>
                         •Rcc Commercial buildings <br>
                         •Structural Buildings <br>
                         •Lock and Key projects
@@ -1480,8 +1480,8 @@
                     <div class="label">Client Satisfaction</div>
                 </div>
                 <div class="stat-box stat-dark">
-                    <div class="number">100+</div>
-                    <div class="label">Locations Covered in Pune</div>
+                    <div class="number">10+</div>
+                    <div class="label">Locations Covered in Maharashtra</div>
                 </div>
                 <div class="stat-box stat-yellow">
                     <div class="number">8+</div>
@@ -1506,7 +1506,7 @@
                 <div class="team-role">Civil Engineer</div>
                 <p>
                     Civil Engineer with extensive experience in construction, contracting, and advanced waterproofing solutions. 
-                    Specialized in residential and commercial projects.Known for technical expertise, quality workmanship, 
+                    Specialised in residential and commercial projects.Known for technical expertise, quality workmanship, 
                     and long-lasting waterproofing solutions with a strong focus on site execution, safety, and client satisfaction.</p>
             </div>
             <div class="team-card animate-fadeInUp">
@@ -1576,7 +1576,7 @@
          <div class="owner-contact">
             <div class="owner-contact-item">
                 <span>📞</span>
-                <div>+91 8087777462, +91 7028700008</div>
+                <div>+918087777462,+917028700008</div>
             </div>
             <div class="owner-contact-item">
                 <span>✉️</span>
@@ -1600,7 +1600,7 @@
                     <div class="contact-icon">📞</div>
                     <div class="contact-details">
                         <h4>Phone</h4>
-                        <p>+91 8087777462, +91 7028700008</p>
+                        <p>+918087777462,+917028700008</p>
                     </div>
                 </div>
                 <div class="contact-item">
